Introduced open-browser script so that npm run dev opens the browser automatically

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "npm run open-browser && next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "open-browser": "open http://localhost:3000"
   },
   "keywords": [],
   "author": "Theofilos Chamalis",
