--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run open-browser && next",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
+    "deploy": "npm run build && gh-pages -d out",
     "open-browser": "open http://localhost:3000"
   },
   "keywords": [],
@@ -18,5 +19,8 @@
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
