--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "next": "^12.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "preact": "^10.5.15",
+    "@preact/compat": "^17.0.3"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
