Replaced bootstrap cdn script with local installation

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "Theofilos Chamalis",
   "license": "ISC",
   "dependencies": {
+    "@preact/compat": "^17.0.3",
+    "bootswatch": "^4.6.1",
     "next": "^12.0.3",
-    "preact": "^10.5.15",
-    "@preact/compat": "^17.0.3"
+    "preact": "^10.5.15"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
